Roundness fixes and visibility color corrections

--- a/theme4/theme4.css
+++ b/theme4/theme4.css
@@ -56,21 +56,10 @@ form,
 	border-radius: var(--roundness);
 }
 /* Roundness (top) */
-#blogpages a:first-child,
 .postheader,
 .post .title:first-child a {
-	border-top-left-radius: var(--roundness);
-	border-top-right-radius: var(--roundness);
-}
-/* Roundness (right) */
-form input {
-	border-top-right-radius: var(--roundness);
-	border-bottom-right-radius: var(--roundness);
-}
-/* Roundness (bottom) */
-#blogpages a:last-child {
-	border-bottom-left-radius: var(--roundness);
-	border-bottom-right-radius: var(--roundness);
+	border-top-left-radius: calc(0.7*var(--roundness));
+	border-top-right-radius: calc(0.7*var(--roundness));
 }
 
 /* Tippy tooltips styling */
@@ -261,7 +250,7 @@ main {
 	align-items: center;
 	justify-content: center;
 	background-color: var(--border);
-	color: var(--bg);
+	color: var(--post);
 	border: 0.125em solid var(--border);
 	transition-property: color, background-color;
 }
@@ -389,8 +378,8 @@ main {
 .audiowrapper .albumart { /* Album art and play/pause button section */
 	z-index: 0;
 	height: var(--albumsize);
-	background-color: var(--text);
-	color: var(--bg);
+	background-color: var(--accent2);
+	color: var(--links);
 	position: relative;
 	display: flex;
 	justify-content: center;
@@ -407,7 +396,7 @@ main {
 	height: 100%;
 }
 .audiowrapper .custom_audio_buttons { /* Play/pause buttons */
-	background: rgba(var(--text--rgb), 0.85);
+	background: var(--accent2);
 	--size: 40%;
 	width: var(--size);
 	height: var(--size);
@@ -573,6 +562,7 @@ form {
 	align-items: center;
 	border: 0.25em solid var(--border);
 	margin: 0.75em 0;
+	overflow: hidden;
 }
 form label {
 	position: fixed;
@@ -600,6 +590,7 @@ form input {
 	border: 0.25em solid var(--border);
 	margin: 0.75em 0;
 	background-color: var(--post);
+	overflow: hidden;
 }
 #blogpages a {
 	display: block;
